fix a group name overflow

--- a/src/index.css
+++ b/src/index.css
@@ -201,7 +201,7 @@ a {
   padding: 20px 10px 15px 10px;
   background-color: #231e1f;
   background-color: #8b00001e;
-  /* height: 255px; */
+  height: 255px;
   width: 220px;
   border-radius: 10px;
   overflow: hidden;
@@ -237,6 +237,7 @@ a {
 .admin-name {
   font-weight: 400;
   margin: 10px;
+  margin: 10px 0;
 }
 
 .group-info {
@@ -380,7 +381,6 @@ footer {
   }
   .card {
     margin: 15px;
-    /* height: 258px; */
     width: 200px;
   }
   .group-info {
@@ -447,7 +447,8 @@ footer {
     font-size: 14px;
   }
   .card {
-    /* height: 225px; */
+    height: 220px;
+    padding: 20px 5px 15px;
     width: 150px;
     margin: 15px 10px;
   }
@@ -465,13 +466,16 @@ footer {
 }
 
 @media (max-width: 380px) {
+  #group-section {
+    padding: 15px 0px 5px 0px;
+  }
   nav {
     padding: 0px 12px;
   }
   .card {
-    /* height: 215px; */
-    width: 130px;
-    margin: 12px 6px;
+    height: 215px;
+    width: 140px;
+    margin: 10px 5px;
   }
   .group-dp {
     width: 95px;
